todo list update

--- a/TODO
+++ b/TODO
@@ -1,3 +1,12 @@
 MAJOR:
+* subareas for area1
+* more scenarios
+* more quests
 MINOR:
+* more effects, recipes and items
 DONE:
+* main area
+* melee atack skill
+* fireball skill
+* effects
+* recipes
