prologue chapter: config file cleanup, scenarios dir removed; todo list update

--- a/TODO
+++ b/TODO
@@ -1,6 +1,6 @@
 MAJOR:
-* subareas for area1
-* more scenarios
+* subareas for area1(with TMX maps for Mural)
+* more areas
 * more quests
 MINOR:
 * more effects, recipes and items
