translation for Mural updated

--- a/mural/lang/english/gui.lang
+++ b/mural/lang/english/gui.lang
@@ -52,6 +52,10 @@ loadgame_load_mod_res_info:Loading module resources...
 loadgame_import_save_info:Importing saved game...
 loadgame_load_game_info:Loading saved game...
 loadgame_menu_title:Load game
+login_menu_title:Login to the server
+login_menu_login_label:Login
+login_menu_pass_label:Password
+login_menu_login_button_label:Login
 load_b_label:Load
 load_map_info:Loading map...
 load_avatars_info:Loading characters avatars...
