--- a/mural/lang/english/gui.lang
+++ b/mural/lang/english/gui.lang
@@ -21,6 +21,9 @@ settings_reset_msg:Some changes need game restart.
 login_button_label:Login
 login_button_info:Login to the server
 login_logged_in_msg:Logged to the server
+continue_button_label:Continue
+continue_button_info:Continue game
+entering_game_info:Loading game...
 newgame_button_label:New game
 newgame_button_info:Start new game
 newgame_menu_title:Start new game
@@ -30,7 +33,7 @@ newgame_export_button_label:Export character
 newgame_export_msg:Character exported
 newgame_start_info:Starting new game...
 newchar_menu_title:Create new character
-newchar_name_edit_label:Name:
+newchar_name_edit_label:Name
 newchar_face_switch_label:Portrait
 newchar_str_switch_label:Strength
 newchar_con_switch_label:Constitution
