--- a/mural/lang/english/gui.lang
+++ b/mural/lang/english/gui.lang
@@ -33,7 +33,7 @@ newgame_export_button_label:Export character
 newgame_export_msg:Character exported
 newgame_start_info:Starting new game...
 newchar_menu_title:Create new character
-newchar_name_edit_label:Name
+newchar_name_edit_label:Name:
 newchar_face_switch_label:Portrait
 newchar_str_switch_label:Strength
 newchar_con_switch_label:Constitution
@@ -118,3 +118,8 @@ cant_do_right_now:Can't do right now
 system:System
 com_no:No
 com_yes:Yes
+ob_health:Health
+quest_accepted_msg:Quest accepted
+skill_added_msg:Skill added
+game_paused:Game Paused
+game_unpaused:Game Unpaused
